--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -9,7 +9,7 @@
     align-items: center;
     perspective: 90rem;
     perspective-origin: 30% 60%;
-    background-color: black;
+    background-color: white;
     width: 90%;
     margin:auto;
     justify-content: space-between;
