--- a/src/components/MessagesList/MessagesList.css
+++ b/src/components/MessagesList/MessagesList.css
@@ -1,4 +1,4 @@
 .searchTextField .MuiInputBase-root{
-  border: 1px solid !important;
+  border: 0.5px solid lightgray !important;
   border-radius: 50px !important;
 }
